fixed main overflow logic

--- a/style/index.scss
+++ b/style/index.scss
@@ -1,6 +1,6 @@
 // fonts
-@import "./fonts/Mulller/stylesheet.css";
-@import "./fonts/Roboto/stylesheet.css";
+// @import "./fonts/Mulller/stylesheet.css";
+// @import "./fonts/Roboto/stylesheet.css";
 
 body {
   background-color: #222631;
@@ -11,6 +11,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  color: white;
 }
 
 .important-text {
@@ -20,6 +21,7 @@ body {
 .header {
   padding: 17px 200px 17px 98px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  margin-bottom: 5px;
 
   //   &__menu {
   //     display: flex;
@@ -33,13 +35,25 @@ body {
     display: inline-block;
     margin-right: 60px;
     font-family: "Muller";
-    font-weight: 500;
+    font-weight: 800;
     font-size: 22px;
     line-height: 22px;
     color: #ffc15e;
+    text-decoration: none;
   }
   &__menu-item:first-child {
     margin-right: 308px;
+  }
+}
+main {
+  overflow: hidden;
+}
+.main {
+  position: relative;
+  height: 1200px;
+  bottom: 44px;
+  &__lines {
+    position: absolute;
   }
 }
 
